# EdelweissFE

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  MANIFEST.in  README.md  buildEdelweiss.py  contributors.html  edelweiss.py  features.html  genindex.html  index.html  install.py  installation.html  objects.inv  prerequisites.html  publications.html  py-modindex.html  pyproject.toml  requirements.txt  run_tests.py  search.html  searchindex.js  setup.py  test.py  validateEdelweiss.py
.doctrees/: contributors.doctree  environment.pickle  features.doctree  index.doctree  installation.doctree  prerequisites.doctree  publications.doctree
.doctrees/documentation/: analyticalfields.doctree  constraints.doctree  dofmanager.doctree  elements.doctree  exceptions.doctree  fieldoutputmanager.doctree  fields.doctree  (+22 more)
_modules/: index.html
_sources/: contributors.rst.txt  features.rst.txt  index.rst.txt  installation.rst.txt  prerequisites.rst.txt  publications.rst.txt
_static/: documentation_options.js  pygments.css
documentation/: analyticalfields.html  constraints.html  dofmanager.html  elements.html  exceptions.html  fieldoutputmanager.html  fields.html  generators.html  index.html  jobs.html  journal.html  keywords.html  linsolvers.html  materials.html  mesh.html  models.html  output.html  parallelization.html  phenomena.html  plotter.html  points.html  sections.html  sets.html  solvers.html  stepactions.html  steps.html  syntax.html  utils.html  variables.html
fe/: fecore.py
testfiles/: test.inp  testSingleCPS4.inp  testTruss.inp
(+948 files in other folders)
