[build-system]
requires = ["setuptools", "Cython", "numpy"]


[project]
name = "EdelweissFE"
version = "25.08"
description = "EdelweissFE: A light-weight, platform-independent, parallel finite element framework."
readme = "README.md"
authors = [
    { name = "Matthias Neuner", email = "matthias.neuner@uibk.ac.at" }
]
license = { text = "LGPL-2.1" }
urls = { Homepage = "https://github.com/EdelweissFE/EdelweissFE" }
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
edelweissfe = "edelweissfe._cli._edelweissfe:main"
run_tests_edelweissfe = "edelweissfe._cli._run_tests_edelweissfe:main"
